# YOLO_ROS_CPP

./: .gitignore  CMakeLists.txt  README.md  export_models.py
.github/workflows/: ci.yml
launch/: detector2.launch.py  detector3.launch.py  detector4.launch.py
src/conversion/: segmentation_converter.cpp
src/nodes/: classifier_node.cpp  detector_node.cpp  obb_node.cpp  pose_node.cpp  segmentor_node.cpp
